Alterado imagens e textos do layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,15 @@
     <string name="app_name">Business Manager</string>
     <string name="logo">Logo</string>
     <string name="btn_login">REALIZAR LOGIN</string>
+    <string name="login">Login</string>
+    <string name="senha">Senha</string>
+    <string name="tipo">Tipo</string>
+    <string name="info_login">Informe o seu login</string>
+    <string name="info_senha">Informe a sua senha</string>
     <string name="btn_cad">CADASTRAR</string>
-    <string name="adm">Administrador</string>
+    <string name="adm">Patrão</string>
     <string name="func">Funcionário</string>
+    <string name="foto">Avatar</string>
     <string name="escolha">Escolha seu tipo de cadastro</string>
     <string name="escolher">Escolher</string>
 </resources>
